# 2d3d_Arch_element_recogintion

./: CMakeLists.txt  Smartik.vcxproj  Smartik.vcxproj.filters
RFIX/: SmartikFix.grc
RINT/: Smartik.grc
Src/: APICommon.c  APICommon.h  APIEnvir.h  ColRec.cpp  ColRec.h  CurWallRec.cpp  CurWallRec.h  DoorRec.cpp  DoorRec.h  Extras.cpp  Extras.h  FloorRec.cpp  FloorRec.h  GeoAnalysis.cpp  GeoAnalysis.h  Numberer.cpp  Numberer.h  Polygons.cpp  Polygons.h  RecHandler.cpp  RecHandler.h  Resources.cpp  Resources.hpp  Room.cpp  Room.h  RoomRec.cpp  RoomRec.h  Smartik.c  TmrTech.cpp  TmrTech.h  WallMatch.cpp  WallMatch.h  WallRec.cpp  WallRec.h  WindowRec.cpp  WindowRec.h
